test/TestPhases/importchecking/invalid/multiplecyclicprogramimport.blc
import mcpi "multiplecyclicprogramimport"

@[EntryPoint]
activity Main ()
    await true
end